--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import "components/modal";
 @import "components/slider";
 @import "components/typewriter";
+@import "components/headerTitle";
+@import "intersectionClasses/galleryHeader";
 
 @import "navbar";
 @import "header";
