--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:300,600");
 :root {
-  --background: rgba(255, 255, 255, 1);
+  --background: rgb(255, 255, 255);
+  --backgroundFooter: rgb(9, 9, 9);
   --black: #000;
   --orange: #f26722;
   --yellow: #f5e608;
@@ -37,8 +38,8 @@ html {
       font-size: 50%; } }
 
 body {
-  font-family: "Lato", sans-serif;
-  color: #6d5d4b;
+  font-family: "Lora", serif;
+  color: var(--black);
   font-weight: 300;
   line-height: 1.6;
   background-color: #aaa; }
@@ -279,32 +280,18 @@ h2 {
       font-size: 1.5rem; } }
 
 .header__style {
-  width: 100vw;
+  width: 100%;
   padding: 6rem 0 6rem 0;
   letter-spacing: 1rem;
   color: var(--white);
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
-  .header__style h2:before {
-    content: "";
-    width: 3px;
-    height: 100%;
-    border: solid 3px yellow;
-    background-color: yellow;
-    margin-right: 3rem; }
-  .header__style h2:after {
-    content: "";
-    width: 3px;
-    height: 100%;
-    border: solid 3px yellow;
-    background-color: yellow;
-    margin-left: 3rem; }
 
 .title {
   transition: all 1s;
   opacity: 0;
-  transform: translateX(-80rem); }
+  transform: translateX(-50rem); }
 
 .interGallHeader {
   opacity: 1;
@@ -314,7 +301,7 @@ h2 {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
   position: fixed;
-  min-height: 7rem;
+  min-height: 5.4rem;
   width: 100%;
   background: var(--background);
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -373,7 +360,7 @@ h2 {
     margin: 0;
     padding: 0;
     list-style: none;
-    font-weight: 500; }
+    font-weight: 700; }
     .nav__list--item {
       margin-bottom: 1em;
       margin-left: 1em;
@@ -381,7 +368,7 @@ h2 {
   .nav a {
     color: var(--black);
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
     opacity: 0;
     border-radius: var(--smRad); }
@@ -414,7 +401,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr auto minmax(600px, 3fr) 8rem; }
   .logo {
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     margin: auto 0; }
   .nav {
     position: relative;
@@ -689,11 +676,11 @@ h2 {
 
 .about__header {
   grid-column: 1 / -1;
-  grid-row: 11 / 12; }
+  grid-row: 9 / 10; }
 
 .about__container {
   grid-column: 1 / -1;
-  grid-row: 12 / 13;
+  grid-row: 10 / 11;
   height: auto;
   min-height: 100vh;
   width: 100%;
@@ -735,11 +722,11 @@ h2 {
 
 .contact__header {
   grid-column: 1 / -1;
-  grid-row: 7 / 8; }
+  grid-row: 11 / 12; }
 
 .contact__container {
   grid-column: 1 / -1;
-  grid-row: 8 / 9;
+  grid-row: 12 / 13;
   height: 100vh;
   width: 100%;
   padding: 6rem;
@@ -762,7 +749,6 @@ h2 {
     background-origin: top;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
     @media only screen and (max-width: 50em) {
       .contact__container .contact--wrapper {
@@ -824,40 +810,79 @@ h2 {
 
 .testimonial__header {
   grid-column: 1 / -1;
-  grid-row: 9 / 10;
-  width: 100%;
-  padding: 6rem;
-  letter-spacing: 1rem;
-  color: white;
-  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
-  .testimonial__header h2:before {
-    content: "";
-    width: 3px;
-    height: 100%;
-    border: solid 3px yellow;
-    background-color: yellow;
-    margin-right: 3rem; }
-  .testimonial__header h2:after {
-    content: "";
-    width: 3px;
-    height: 100%;
-    border: solid 3px yellow;
-    background-color: yellow;
-    margin-left: 3rem; }
+  grid-row: 7 / 8; }
 
 .testimonial__container {
   grid-column: 1 / -1;
-  grid-row: 10 / 11;
-  height: 100vh;
+  grid-row: 8 / 9;
+  height: auto;
   width: 100%;
   padding: 6rem;
   background: #fff; }
   .testimonial__container--wrapper {
     position: relative;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-    width: 100%;
+    width: auto;
     height: 100%;
+    padding: 2rem 1.5rem 2rem 1.5rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    background: pink; }
+    justify-content: space-between;
+    font-size: 2rem;
+    text-overflow: auto; }
+
+.review {
+  text-align: center;
+  padding: 1rem; }
+  .review:not(:last-child) {
+    border-bottom: 1px solid black; }
+  .review:not(:first-child) {
+    padding-top: 2.7rem; }
+  .review__user--name {
+    font-size: 2.4rem; }
+
+.review__para {
+  overflow: visible;
+  width: 100%;
+  position: relative;
+  padding: 1rem;
+  z-index: 1; }
+  .review__para::before {
+    content: "\201C";
+    color: rgba(133, 133, 133, 0.4);
+    position: absolute;
+    top: 5rem;
+    left: -1rem;
+    line-height: 0;
+    font-size: 15rem;
+    z-index: 0; }
+  .review__para::after {
+    content: "\201e";
+    color: rgba(133, 133, 133, 0.4);
+    position: absolute;
+    top: -3rem;
+    right: 0;
+    line-height: 0;
+    font-size: 15rem;
+    z-index: 0; }
+
+.footer {
+  grid-column: 1 / -1;
+  grid-row: 13 / 14;
+  height: auto;
+  min-height: 50rem;
+  background: var(--backgroundFooter);
+  color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .footer p a {
+    color: white;
+    font-size: 2rem; }
+  .footer textarea {
+    width: 33rem;
+    background: rgba(238, 238, 238, 0.192);
+    color: var(--white);
+    font-size: 2rem; }
+  .footer .form__input {
+    width: 33rem; }
