--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -4,7 +4,7 @@
 
 	position: fixed;
 
-	min-height: 7rem;
+	min-height: 5.4rem;
 	width: 100%;
 
 	background: var(--background);
@@ -75,7 +75,7 @@
 		margin: 0;
 		padding: 0;
 		list-style: none;
-		font-weight: 500;
+		font-weight: 700;
 		&--item {
 			margin-bottom: 1em;
 			margin-left: 1em;
@@ -85,7 +85,7 @@
 	& a {
 		color: var(--black);
 		text-decoration: none;
-		font-size: 1.6rem;
+		font-size: 1.5rem;
 		text-transform: uppercase;
 		opacity: 0;
 		// padding: 0.8rem;
@@ -133,7 +133,8 @@
 	}
 
 	.logo {
-		grid-column: 1 / 2;
+		grid-column: 2 / 3; // to center logo
+		// grid-column: 1 / 2;
 		margin: auto 0;
 	}
 
