--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:300,600");
 :root {
   --background: rgb(255, 255, 255);
-  --backgroundFooter: rgb(9, 9, 9);
+  --backgroundFooter: #1e1e1e;
+  --footerFontColor: #7b7b7b;
   --black: #000;
   --orange: #f26722;
   --yellow: #f5e608;
+  --danger: #ff0000;
+  --passed: #31e63a;
   --white: #fff;
   --blackRGBA: rgba(0, 0, 0, 0.61);
   --whiteRGBA: rgba(255,255,255, 0.8);
@@ -171,10 +174,10 @@ h2 {
 
 .slider {
   grid-column: 1 / -1;
-  grid-row: 2 / 3;
+  grid-row: 1 / 3;
   position: relative;
   overflow: hidden;
-  height: 100vh;
+  height: 100%;
   width: auto; }
 
 .slide {
@@ -187,30 +190,6 @@ h2 {
   transition: opacity 0.4s ease-in-out; }
   .slide.current {
     opacity: 1; }
-
-.buttons button#next {
-  position: absolute;
-  top: 50%;
-  right: 1.5rem; }
-
-.buttons button#prev {
-  position: absolute;
-  top: 50%;
-  left: 1.5rem; }
-
-.buttons button {
-  border: 0.2rem solid #fff;
-  background-color: var(--blackRGBA);
-  font-size: 2rem;
-  color: #fff;
-  cursor: pointer;
-  padding: 2.3rem;
-  border-radius: 0.3rem;
-  outline: none; }
-
-.buttons button:hover {
-  background-color: #fff;
-  color: #333; }
 
 @media (max-width: 500px) {
   .slide .content {
@@ -297,6 +276,12 @@ h2 {
   opacity: 1;
   transform: translateX(0); }
 
+.interNav {
+  transition: all 0.5s;
+  color: var(--yellow) !important;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+  background: rgba(219, 30, 30, 0) !important; }
+
 .header {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
@@ -306,7 +291,8 @@ h2 {
   background: var(--background);
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   text-align: center;
-  z-index: 9; }
+  z-index: 9;
+  transition: all 0.5s; }
 
 /* makes it tabbable */
 .nav-toggle {
@@ -500,6 +486,7 @@ h2 {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background-color: #fff;
   padding: 5rem 0;
@@ -511,6 +498,7 @@ h2 {
   width: 90%; }
   .card__side {
     height: auto;
+    margin-top: 3rem;
     position: relative;
     width: 100%;
     border-radius: 3px;
@@ -523,7 +511,7 @@ h2 {
       .card__side--bottom-1 {
         background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
       .card__side--bottom-2 {
-        background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), #09568a); }
+        background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
       .card__side--bottom-3 {
         background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
         margin: -2rem 0 0 0; }
@@ -539,7 +527,7 @@ h2 {
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)), url(../img/gal-1.jpeg); }
     .card__picture--2 {
-      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), #09568a), url(../img/gal-2.jpeg); }
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)), url(../img/gal-2.jpeg); }
     .card__picture--3 {
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)), url(../img/gal-3.jpeg); }
   .card__heading {
@@ -559,7 +547,7 @@ h2 {
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(39, 52, 99, 0.85)); }
     .card__heading-span--2 {
-      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(9, 86, 138, 0.85)); }
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(39, 52, 99, 0.85)); }
     .card__heading-span--3 {
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(39, 52, 99, 0.85)); }
   .card__details {
@@ -720,94 +708,6 @@ h2 {
       background-color: yellow;
       margin-left: 3rem; }
 
-.contact__header {
-  grid-column: 1 / -1;
-  grid-row: 11 / 12; }
-
-.contact__container {
-  grid-column: 1 / -1;
-  grid-row: 12 / 13;
-  height: 100vh;
-  width: 100%;
-  padding: 6rem;
-  background: #fff; }
-  @media only screen and (max-width: 62.5em) {
-    .contact__container {
-      padding: 10rem 0; } }
-  .contact__container--img {
-    background: rgba(9, 9, 9, 0.8); }
-  .contact__container .contact--wrapper {
-    position: relative;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-    width: 50%;
-    padding: 6rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-image: linear-gradient(105deg, rgba(235, 232, 228, 0.884) 0%, rgba(202, 202, 202, 0.87) 50%), url("../img/residential_small.jpg");
-    height: 100%;
-    background-origin: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
-    @media only screen and (max-width: 50em) {
-      .contact__container .contact--wrapper {
-        width: 100%; } }
-  .contact__container .contact__info {
-    width: 56%;
-    clip-path: polygon(21% 0, 110% 0, 100% 100%, 0% 100%);
-    background: rgba(0, 0, 0, 0.8);
-    color: white;
-    font-size: 4rem;
-    padding-right: 9rem;
-    text-align: right; }
-  .contact__container textarea {
-    max-width: 33vw;
-    min-width: 33vw;
-    max-height: 35vh;
-    min-height: 35vh; }
-    @media only screen and (max-width: 50em) {
-      .contact__container textarea {
-        max-width: 80vw;
-        min-width: 80vw; } }
-
-.form__input {
-  display: block;
-  width: 33vw;
-  font-size: 1.5rem;
-  font-family: inherit;
-  color: inherit;
-  padding: 1.5rem 2rem;
-  border-radius: 2px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-bottom: 3px solid transparent;
-  transition: all 0.3s; }
-  @media only screen and (max-width: 50em) {
-    .form__input {
-      width: 80vw; } }
-  .form__input:focus {
-    outline: none;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-    border-bottom: 3px solid #f9f7f6; }
-  .form__input:focus:invalid {
-    border-bottom: 3px solid rgba(39, 52, 99, 0.9); }
-  .form__input::-webkit-input-placeholder {
-    color: #6d5d4b; }
-
-.form__label {
-  font-size: 1.2rem;
-  font-weight: 700;
-  margin-left: 2rem;
-  margin-top: 0.7rem;
-  display: block;
-  transition: all 0.3s; }
-
-.form__input:placeholder-shown + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4rem); }
-
 .testimonial__header {
   grid-column: 1 / -1;
   grid-row: 7 / 8; }
@@ -868,21 +768,148 @@ h2 {
 
 .footer {
   grid-column: 1 / -1;
-  grid-row: 13 / 14;
+  grid-row: 11 / 12;
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(8, min-content);
   height: auto;
-  min-height: 50rem;
+  min-height: 40rem;
+  padding: 2rem 6rem 2rem 6rem;
   background: var(--backgroundFooter);
   color: var(--white);
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .footer p a {
-    color: white;
-    font-size: 2rem; }
-  .footer textarea {
-    width: 33rem;
-    background: rgba(238, 238, 238, 0.192);
+  font-size: 2rem; }
+  @media only screen and (max-width: 50em) {
+    .footer {
+      font-size: 1.8rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .footer {
+      font-size: 1.4rem; } }
+  .footer__header {
+    grid-column: 4 / 7;
+    grid-row: 1 / 2;
     color: var(--white);
-    font-size: 2rem; }
-  .footer .form__input {
-    width: 33rem; }
+    text-align: center;
+    letter-spacing: 0.3rem;
+    font-size: 3rem;
+    padding-top: 3rem; }
+    @media only screen and (max-width: 37.5em) {
+      .footer__header {
+        grid-column: 3 / 8;
+        font-size: 2.5rem; } }
+    .footer__header hr {
+      width: 60%;
+      margin: 0 auto;
+      border: solid 2px white;
+      border-radius: 3px; }
+      @media only screen and (max-width: 62.5em) {
+        .footer__header hr {
+          width: 70%; } }
+      @media only screen and (max-width: 50em) {
+        .footer__header hr {
+          width: 90%; } }
+      @media only screen and (max-width: 37.5em) {
+        .footer__header hr {
+          width: 66%; } }
+  .footer__info {
+    grid-column: 1 / 5;
+    grid-row: 2 / 3;
+    padding: 2rem;
+    text-align: center;
+    height: auto;
+    align-self: center; }
+    @media only screen and (max-width: 50em) {
+      .footer__info {
+        grid-column: 1 / -1;
+        padding: 6rem 0 2rem 0;
+        align-self: flex-start; } }
+  .footer__form {
+    grid-column: 6 / -1;
+    grid-row: 2 / 3;
+    padding: 2rem;
+    height: auto;
+    font-size: 1rem; }
+    @media only screen and (max-width: 50em) {
+      .footer__form {
+        grid-column: 3 / 8;
+        grid-row: 3 / 4;
+        font-size: 0.8rem;
+        padding: 6rem 0; } }
+    @media only screen and (max-width: 37.5em) {
+      .footer__form {
+        font-size: 0.6rem; } }
+    .footer__form p {
+      font-size: 1.4rem;
+      text-align: center;
+      padding-bottom: 2rem; }
+    .footer__form textarea {
+      width: 100%; }
+  .footer__social {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    text-align: center;
+    color: var(--white);
+    padding: 2rem;
+    width: 100%;
+    height: auto; }
+    @media only screen and (max-width: 50em) {
+      .footer__social {
+        grid-row: 4 / 5; } }
+    .footer__social i {
+      margin: 2rem;
+      display: inline-block;
+      font-size: 6rem; }
+    .footer__social--icon {
+      color: var(--white);
+      text-decoration: none; }
+
+.form {
+  height: auto; }
+  .form__input {
+    display: block;
+    width: 100%;
+    font-size: 1.5rem;
+    font-family: inherit;
+    color: inherit;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    border-radius: 2px;
+    border-bottom: 3px solid transparent;
+    transition: all 0.3s; }
+    @media only screen and (max-width: 50em) {
+      .form__input {
+        width: 100%; } }
+    .form__input::-webkit-input-placeholder {
+      color: var(--white); }
+    .form__input::placeholder {
+      color: var(--white); }
+    .form__input:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+      border-bottom: 3px solid var(--yellow); }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid var(--danger); }
+  .form__label {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-left: 1rem;
+    display: block;
+    transition: all 0.3s; }
+  .form textarea {
+    height: 20rem;
+    margin: 2rem 0;
+    padding: 1rem;
+    letter-spacing: 2px;
+    font-family: inherit;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999; }
+  .form__button {
+    height: 5rem;
+    width: 100%;
+    border-radius: 2px;
+    background: grey; }
+    .form__button:hover {
+      background: var(--yellow); }
+    .form__button:active {
+      background: var(--passed); }
