--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -15,7 +15,7 @@
 
 	display: flex;
 	flex-direction: column;
-	// justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 
 	background-color: $color-white;
@@ -33,6 +33,7 @@
 
 	&__side {
 		height: auto;
+		margin-top: 3rem;
 		// position: absolute;
 		position: relative;
 		width: 100%;
