--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,133 +1,45 @@
-.contact__header {
-	grid-column: 1 / -1;
-	grid-row: 11 / 12;
-}
+// 	& .contact--wrapper {
+// 		position: relative;
+// 		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
-.contact__container {
-	grid-column: 1 / -1;
-	grid-row: 12 / 13;
+// 		width: 50%;
+// 		padding: 6rem;
 
-	// height: auto;
-	height: 100vh;
-	width: 100%;
+// 		display: flex;
+// 		flex-direction: row;
 
-	padding: 6rem;
+// 		justify-content: space-between;
 
-	background: $color-white;
+// 		background-image: linear-gradient(
+// 				105deg,
+// 				rgba(235, 232, 228, 0.884) 0%,
+// 				rgba(202, 202, 202, 0.87) 50%
+// 			),
+// 			url("../img/residential_small.jpg");
+// 		height: 100%;
+// 		background-origin: top;
+// 		background-size: cover;
+// 		background-repeat: no-repeat;
+// 	}
 
-	@media only screen and (max-width: $bp-large) {
-		padding: 10rem 0;
-	}
+// 	// __COMMENT_AREA__
+// 	& textarea {
+// 		max-width: 33vw;
+// 		min-width: 33vw;
 
-	&--img {
-		background: rgba(9, 9, 9, 0.8);
-	}
-	& .contact--wrapper {
-		position: relative;
-		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+// 		max-height: 35vh;
+// 		min-height: 35vh;
 
-		width: 50%;
-		padding: 6rem;
+// 		@media only screen and(max-width: $bp-medium) {
+// 			max-width: 80vw;
+// 			min-width: 80vw;
+// 		}
+// 	}
+// }
 
-		display: flex;
-		flex-direction: row;
-
-		justify-content: space-between;
-
-		background-image: linear-gradient(
-				105deg,
-				rgba(235, 232, 228, 0.884) 0%,
-				rgba(202, 202, 202, 0.87) 50%
-			),
-			url("../img/residential_small.jpg");
-		height: 100%;
-		background-origin: top;
-		background-size: cover;
-		background-repeat: no-repeat;
-		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
-
-		@media only screen and(max-width: $bp-medium) {
-			width: 100%;
-		}
-	}
-
-	// right side of form
-	.contact__info {
-		width: 56%;
-		clip-path: polygon(21% 0, 110% 0, 100% 100%, 0% 100%);
-		background: rgba(0, 0, 0, 0.8);
-
-		color: white;
-		font-size: 4rem;
-
-		padding-right: 9rem;
-		text-align: right;
-	}
-
-	// __COMMENT_AREA__
-	& textarea {
-		max-width: 33vw;
-		min-width: 33vw;
-
-		max-height: 35vh;
-		min-height: 35vh;
-
-		@media only screen and(max-width: $bp-medium) {
-			max-width: 80vw;
-			min-width: 80vw;
-		}
-	}
-}
-
-.form {
-	&__input {
-		display: block;
-		width: 33vw;
-
-		font-size: 1.5rem;
-		font-family: inherit;
-		color: inherit;
-
-		padding: 1.5rem 2rem;
-
-		border-radius: 2px;
-		background-color: rgba($color-white, 0.5);
-		border: none;
-		border-bottom: 3px solid transparent;
-
-		transition: all 0.3s;
-
-		@media only screen and(max-width: $bp-medium) {
-			width: 80vw;
-		}
-
-		&:focus {
-			outline: none;
-			box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
-			border-bottom: 3px solid $color-primary;
-		}
-
-		&:focus:invalid {
-			border-bottom: 3px solid $color-secondary-dark;
-		}
-
-		&::-webkit-input-placeholder {
-			color: $color-grey-dark-2;
-		}
-	}
-
-	&__label {
-		font-size: 1.2rem;
-		font-weight: 700;
-		margin-left: 2rem;
-		margin-top: 0.7rem;
-		display: block;
-		transition: all 0.3s;
-	}
-
-	&__input:placeholder-shown + &__label {
-		opacity: 0;
-		visibility: hidden;
-		transform: translateY(-4rem);
-	}
-}
+// 	&__input:placeholder-shown + &__label {
+// 		opacity: 0;
+// 		visibility: hidden;
+// 		transform: translateY(-4rem);
+// 	}
+// }
