--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,10 +1,10 @@
 .slider {
 	grid-column: 1 / -1;
-	grid-row: 2 / 3;
+	grid-row: 1 / 3;
 
 	position: relative;
 	overflow: hidden;
-	height: 100vh;
+	height: 100%;
 	width: auto;
 }
 
@@ -40,35 +40,35 @@
 	// }
 }
 
-.buttons button#next {
-	position: absolute;
-	top: 50%;
-	right: 1.5rem;
-}
+// .buttons button#next {
+// 	position: absolute;
+// 	top: 50%;
+// 	right: 1.5rem;
+// }
 
-.buttons button#prev {
-	position: absolute;
-	top: 50%;
-	left: 1.5rem;
-}
+// .buttons button#prev {
+// 	position: absolute;
+// 	top: 50%;
+// 	left: 1.5rem;
+// }
 
-.buttons button {
-	border: 0.2rem solid #fff;
-	background-color: var(--blackRGBA);
+// .buttons button {
+// 	border: 0.2rem solid #fff;
+// 	background-color: var(--blackRGBA);
 
-	font-size: 2rem;
-	color: #fff;
-	cursor: pointer;
+// 	font-size: 2rem;
+// 	color: #fff;
+// 	cursor: pointer;
 
-	padding: 2.3rem;
-	border-radius: 0.3rem;
-	outline: none;
-}
+// 	padding: 2.3rem;
+// 	border-radius: 0.3rem;
+// 	outline: none;
+// }
 
-.buttons button:hover {
-	background-color: #fff;
-	color: #333;
-}
+// .buttons button:hover {
+// 	background-color: #fff;
+// 	color: #333;
+// }
 
 @media (max-width: 500px) {
 	.slide .content {
