--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,6 +239,9 @@ h2 {
 .typewriter--header1 {
   font-size: 3.5rem;
   text-align: center; }
+  .typewriter--header1 .middle {
+    font-size: 2.3rem;
+    display: inline-block; }
   @media only screen and (max-width: 62.5em) {
     .typewriter--header1 {
       font-size: 5rem; } }
@@ -293,6 +296,13 @@ h2 {
   text-align: center;
   z-index: 9;
   transition: all 0.5s; }
+  .header .logo-img {
+    width: auto;
+    height: 5rem;
+    margin-top: 0.5rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: top; }
 
 /* makes it tabbable */
 .nav-toggle {
