--- a/public/sass/_navbar.scss
+++ b/public/sass/_navbar.scss
@@ -16,6 +16,15 @@
 	z-index: 9;
 
 	transition: all 0.5s;
+
+	& .logo-img {
+		width: auto;
+		height: 5rem;
+		margin-top: 0.5rem;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-origin: top;
+	}
 }
 
 /* makes it tabbable */
