--- a/public/sass/components/_typewriter.scss
+++ b/public/sass/components/_typewriter.scss
@@ -59,6 +59,13 @@
 .typewriter--header1 {
 	font-size: 3.5rem;
 	text-align: center;
+
+	& .middle {
+		font-size: 2.3rem;
+		// background: blue;
+
+		display: inline-block;
+	}
 	@media only screen and (max-width: $bp-large) {
 		font-size: 5rem;
 	}
