--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -6,6 +6,7 @@
 @import "components/slider";
 @import "components/typewriter";
 @import "components/headerTitle";
+@import "components/button";
 @import "intersectionClasses/intersectionClasses";
 
 @import "navbar";
