added button and buttons styles

--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -7,6 +7,8 @@
 	--footerFontColor: #7b7b7b;
 	--black: #000; 
 	--orange: #f26722;
+	--orange-linear: rgba(239, 103, 35, 1);
+	--yellow-linear: rgba(239, 201, 26, 1);
 	--yellow: #f5e608;
 	--danger: #ff0000;
 	--passed: #31e63a;
