--- a/views/typewriter.ejs
+++ b/views/typewriter.ejs
@@ -3,5 +3,5 @@
     <span class="txt-type" data-wait="3000" data-words='["Contractors", "Services", "Staff"]'></span>
   </h1>
   <h2 class="typewirter--header2">Contact Us For a Quote</h2>
+  <a class="btn btn-generic" href="#contact" autofocus>Contact Us</a>
 </div>
-<!-- <button class="typewriter--button button">Contact Us</button> -->
