--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,8 @@
   --footerFontColor: #7b7b7b;
   --black: #000;
   --orange: #f26722;
+  --orange-linear: rgba(239, 103, 35, 1);
+  --yellow-linear: rgba(239, 201, 26, 1);
   --yellow: #f5e608;
   --danger: #ff0000;
   --passed: #31e63a;
@@ -269,6 +271,40 @@ h2 {
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+
+.btn {
+  display: inline-block;
+  line-height: normal;
+  white-space: nowrap;
+  vertical-align: middle;
+  text-align: center;
+  cursor: pointer;
+  word-spacing: normal; }
+
+.btn-generic {
+  width: 50%;
+  margin: 0 auto 0 auto;
+  font-family: inherit;
+  font-size: 2rem;
+  padding: 0.5em 1em;
+  color: #444;
+  /* rgba not supported (IE 8) */
+  color: rgba(0, 0, 0, 0.8);
+  /* rgba supported */
+  border: 1px solid #999;
+  /*IE 6/7/8*/
+  border: none rgba(0, 0, 0, 0);
+  /*IE9 + everything else*/
+  background-image: linear-gradient(var(--orange-linear) 40%, var(--yellow-linear));
+  text-decoration: none;
+  border-radius: 2px; }
+  .btn-generic:hover, .btn-generic:focus {
+    background-image: linear-gradient(var(--orange-linear) 0%, var(--yellow-linear)); }
+  .btn-generic:focus {
+    outline: 0; }
+  .btn-generic:active {
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+    border-color: #000; }
 
 .title {
   transition: all 1s;
