--- a/views/typewriter.ejs
+++ b/views/typewriter.ejs
@@ -3,5 +3,7 @@
     <span class="txt-type" data-wait="3000" data-words='["Contractors", "Services", "Staff"]'></span>
   </h1>
   <h2 class="typewirter--header2">Contact Us For a Quote</h2>
-  <a class="btn btn-generic" href="#contact" autofocus>Contact Us</a>
+  <br>
+  <br>
+  <a class="btn btn-generic" href="#contact">Contact Us</a>
 </div>
