--- a/public/css/style.css
+++ b/public/css/style.css
@@ -282,7 +282,7 @@ h2 {
   word-spacing: normal; }
 
 .btn-generic {
-  width: 50%;
+  width: 40%;
   margin: 0 auto 0 auto;
   font-family: inherit;
   font-size: 2rem;
@@ -295,9 +295,10 @@ h2 {
   /*IE 6/7/8*/
   border: none rgba(0, 0, 0, 0);
   /*IE9 + everything else*/
-  background-image: linear-gradient(var(--orange-linear) 40%, var(--yellow-linear));
+  background: #fa9601;
+  background: linear-gradient(90deg, var(--orange-linear) 0%, var(--yellow-linear) 100%);
   text-decoration: none;
-  border-radius: 2px; }
+  border-radius: 0.3rem; }
   .btn-generic:hover, .btn-generic:focus {
     background-image: linear-gradient(var(--orange-linear) 0%, var(--yellow-linear)); }
   .btn-generic:focus {
