--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -9,7 +9,7 @@
 }
 
 .btn-generic {
-	width: 50%;
+	width: 40%;
 	margin: 0 auto 0 auto;
 
 	font-family: inherit;
@@ -20,13 +20,19 @@
 	border: 1px solid #999; /*IE 6/7/8*/
 	border: none rgba(0, 0, 0, 0); /*IE9 + everything else*/
 	// background-color: #e6e6e6;
-	background-image: linear-gradient(
-		var(--orange-linear) 40%,
-		var(--yellow-linear)
+	// background-image: linear-gradient(
+	// 	var(--orange-linear) 40%,
+	// 	var(--yellow-linear)
+	// );
+	background: rgb(250, 150, 1);
+	background: linear-gradient(
+		90deg,
+		var(--orange-linear) 0%,
+		var(--yellow-linear) 100%
 	);
 
 	text-decoration: none;
-	border-radius: 2px;
+	border-radius: 0.3rem;
 
 	&:hover,
 	&:focus {
