--- a/views/typewriter.ejs
+++ b/views/typewriter.ejs
@@ -2,8 +2,12 @@
   <h1 class="typewriter--header1">J<p class="middle">&</p>M <br>Great
     <span class="txt-type" data-wait="3000" data-words='["Contractors", "Services", "Staff"]'></span>
   </h1>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <h2 class="typewirter--header2">Contact Us For a Quote</h2>
-  <br>
-  <br>
-  <a class="btn btn-generic" href="#contact">Contact Us</a>
+  <a class="btn btn-generic" href="#contact">Contact</a>
 </div>
