--- a/views/header.ejs
+++ b/views/header.ejs
@@ -30,7 +30,7 @@
         <li class="nav__list--item"><a href="#gallery">Gallery</a></li>
         <li class="nav__list--item"><a href="#about">About</a></li>
         <li class="nav__list--item"><a href="#testimonial">Testimonial</a></li>
-        <li class="nav__list--item"><a href="#contact" autofocus>Contact</a></li>
+        <li class="nav__list--item"><a href="#contact" >Contact</a></li>
       </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
