--- a/views/service.ejs
+++ b/views/service.ejs
@@ -15,7 +15,7 @@
           >Residential Construction Services</span
         >
       </h4>
-      <div class="card__details">
+      <div class="card__details card__details--1">
         <ul>
           <li>Whole Home Remodels</li>
           <li>
@@ -34,9 +34,9 @@
                card__side--bottom-3">
         <div class="card__cta">
           <a 
-          href="#contact" 
-          class="btn btn--white">
-          Contact us
+          class="btn btn-generic"
+          id="expandBtn--1">
+          Expand
           </a>
         </div>
       </div>
@@ -56,7 +56,7 @@
           </span
         >
         </h4>
-        <div class="card__details">
+        <div class="card__details card__details--2">
           <ul>
             <li>
               Restroom remodeling, upgrades &
@@ -81,10 +81,10 @@
              card__side--bottom-3">
       <div class="card__cta">
         <a 
-        href="#contact" 
-        class="btn btn--white">
-        Contact us
-        </a>
+          class="btn btn-generic"
+          id="expandBtn--2">
+          Expand
+          </a>
       </div>
     </div>
   </div>
@@ -101,7 +101,7 @@
             Services</span
           >
         </h4>
-        <div class="card__details">
+        <div class="card__details card__details--3">
           <ul>
             <li>
               Electrical Panel Upgrades &
@@ -145,9 +145,9 @@
                card__side--bottom-3">
         <div class="card__cta">
           <a 
-          href="#contact" 
-          class="btn btn--white">
-          Contact us
+          class="btn btn-generic"
+          id="expandBtn--3">
+          Expand
           </a>
         </div>
       </div>
