--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,7 +300,7 @@ h2 {
   text-decoration: none;
   border-radius: 0.3rem; }
   .btn-generic:hover, .btn-generic:focus {
-    background-image: linear-gradient(var(--orange-linear) 0%, var(--yellow-linear)); }
+    background-image: linear-gradient(90deg, var(--orange-linear) 20%, var(--yellow-linear) 80%); }
   .btn-generic:focus {
     outline: 0; }
   .btn-generic:active {
@@ -553,25 +553,22 @@ h2 {
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
     .card__side--upper {
       background-color: #fff; }
-    .card__side--bottom {
-      clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%); }
-      .card__side--bottom-1 {
-        background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
-      .card__side--bottom-2 {
-        background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
-      .card__side--bottom-3 {
-        background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
-        margin: -2rem 0 0 0; }
+    .card__side--bottom-1 {
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
+    .card__side--bottom-2 {
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
+    .card__side--bottom-3 {
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
+      margin: -2rem 0 0 0; }
   .card__picture {
     background-size: cover;
     height: 23rem;
     width: 100%;
     background-blend-mode: screen;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     border-top-left-radius: 3px;
     border-top-right-radius: 3px; }
     .card__picture--1 {
+      background-size: bottom;
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)), url(../img/gal-1.jpeg); }
     .card__picture--2 {
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)), url(../img/gal-2.jpeg); }
@@ -609,6 +606,12 @@ h2 {
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #aaa; }
+    .card__details--1 {
+      height: 30vh; }
+    .card__details--2 {
+      height: 30vh; }
+    .card__details--3 {
+      height: 30vh; }
   .card__cta {
     position: relative;
     top: 0%;
@@ -633,6 +636,15 @@ h2 {
         transform: translate(0);
         width: 100%;
         padding: 7rem 4rem 4rem 4rem; } }
+
+.expand--1 {
+  height: 68vh; }
+
+.expand--2 {
+  height: 75vh; }
+
+.expand--3 {
+  height: 98vh; }
 
 .gallery__header {
   grid-column: 1 / -1;
