--- a/public/sass/_card.scss
+++ b/public/sass/_card.scss
@@ -46,7 +46,7 @@
 		}
 
 		&--bottom {
-			clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+			// clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
 
 			&-1 {
 				background-image: linear-gradient(
@@ -81,12 +81,13 @@
 		height: 23rem;
 		width: 100%;
 		background-blend-mode: screen;
-		-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+		// -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+		// clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
 
 		&--1 {
+			background-size: bottom;
 			background-image: linear-gradient(
 					to right bottom,
 					$color-secondary-light,
@@ -175,6 +176,18 @@
 				}
 			}
 		}
+
+		&--1 {
+			height: 30vh;
+		}
+
+		&--2 {
+			height: 30vh;
+		}
+
+		&--3 {
+			height: 30vh;
+		}
 	}
 
 	// UPPER SIDE STYLING
@@ -225,4 +238,14 @@
 			padding: 7rem 4rem 4rem 4rem;
 		}
 	}
+}
+
+.expand--1 {
+	height: 68vh;
+}
+.expand--2 {
+	height: 75vh;
+}
+.expand--3 {
+	height: 98vh;
 }
