--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -3,3 +3,4 @@
 <script src="/src/slider.js"></script>
 <script src="/src/intersectionObservers/titleObserver.js"></script>
 <script src="/src/intersectionObservers/navObserver.js"></script>
+<script src="/src/expandServiceCards/expand.js"></script>
